<resources>
    <string name="app_name">Speed Track</string>
    <string name="contentdesc"></string>

    <!--Main-->
    <string name="titulo">Speed Track</string>

    <string name="tela_pista">Pistas</string>
    <string name="tela_marca">Marcas</string>
    <string name="tela_drivers">Drivers</string>
    <string name="tela_sobre">Sobre</string>
    <string name="tela_reciclagem">Reciclagem</string>
    <string name="boas_vindas">Entrou como: </string>

    <!--Drivers-->
    <string name="drivers">DRIVERS</string>

    <string name="lewis_hamilton">Lewis Hamilton</string>
    <string name="michael_schumacher">Michael Schumacher</string>
    <string name="ayrton_senna">Ayrton Senna</string>
    <string name="max_verstappen">Max Verstappen</string>
    <string name="charles_leclrc">Charles Leclrc</string>
    <string name="daniel_ricciardo">Daniel Ricciardo</string>

    <!--Pistas-->
    <string name="pistas">PISTAS</string>

    <string name="baku">Baku City Circuit</string>
    <string name="monaco">Mônaco Circuit</string>
    <string name="sachsenring">Sachsenring Circuit</string>
    <string name="interlagos">Interlagos Circuit</string>
    <string name="suzuka">Suzuka Circuit</string>
    <string name="al">Albert Park Circuit</string>
    <string name="miami">Miami Circuit</string>

    <!--Marcas-->
    <string name="marcas">MARCAS</string>

    <string name="mercedes">Mercedes</string>
    <string name="red_bull">Red Bull</string>
    <string name="ferrari">Ferrari</string>
    <string name="mclaren">McLaren</string>
    <string name="aston_martin">Aston Martin</string>
    <string name="alfa_romeo">Alfa Romeo</string>
    <string name="haas">Haas</string>

    <!--Sobre-->
    <string name="sobre">SOBRE</string>

    <string name="desc1">"Speed Track" é um aplicativo focado na Formula 1, onde você pode se informar mais sobre os corredores, as marcas e as pistas, aprendendo um pouco sobre sustentabilidade nesse meio.</string>
    <string name="desc2">Dúvidas como "Como eles evitam a sobrecarga de CO2 com seus carros?" ou "Existe algo reciclável nesse meio?" serão respondidas aqui!</string>

    <!--Reciclagem-->
    <string name="reciclagem">RECICLAGEM</string>
    <string name="vermais">Ver Mais</string>

    <string name="noticia_um">Ford promete “compromisso com sustentabilidade” em parceria com Red Bull</string>
    <string name="noticia_dois">Sustainability and F1: Strive to Survive?</string>
    <string name="noticia_tres">DRIVING SUSTAINABILITY</string>
    <string name="noticia_quatro">Com metas sustentáveis, F1 esbarra na logística do calendário</string>
    <string name="noticia_cinco">F1s Environmental Impact: Will F1s Net-Zero Goals Make a Difference?</string>

    <!--Login-->
    <string name="login">Login</string>

    <string name="login_hint">Login</string>
    <string name="pass_hint">Senha</string>
    <string name="fazer">Fazer Login</string>
</resources>