<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="312dp"
        android:layout_height="272dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="297dp"
            android:layout_height="45dp"
            android:contentDescription="@string/contentdesc"
            app:srcCompat="@drawable/exitlogo" />

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/f1_font_regular"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/bg"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/edtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/f1_font_regular"
            android:hint="@string/login_hint"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:textColor="@color/default_background"
            android:textColorHighlight="@color/default_background"
            android:textColorHint="@color/default_background"
            android:textColorLink="@color/default_background"
            tools:ignore="VisualLintTextFieldSize,DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/edtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/f1_font_regular"
            android:hint="@string/pass_hint"
            android:inputType="text|textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:textColor="@color/default_background"
            android:textColorHighlight="@color/default_background"
            android:textColorHint="@color/default_background"
            android:textColorLink="@color/default_background"
            tools:ignore="VisualLintTextFieldSize,DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/ruby"
            android:fontFamily="@font/f1_font_regular"
            android:onClick="enviarNome"
            android:text="@string/fazer"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>