<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnPistas"
        android:layout_width="101dp"
        android:layout_height="55dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="214dp"
        android:layout_marginBottom="260dp"
        android:backgroundTint="@color/ruby"
        android:fontFamily="@font/f1_font_regular"
        android:onClick="toPistas"
        android:text="@string/tela_pista"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMarca"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginStart="222dp"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="260dp"
        android:backgroundTint="@color/ruby"
        android:fontFamily="@font/f1_font_regular"
        android:onClick="toMarcas"
        android:text="@string/tela_marca"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDrivers"
        android:layout_width="102dp"
        android:layout_height="56dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="510dp"
        android:layout_marginEnd="214dp"
        android:layout_marginBottom="165dp"
        android:backgroundTint="@color/ruby"
        android:fontFamily="@font/f1_font_regular"
        android:onClick="toDrivers"
        android:text="@string/tela_drivers"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSobre"
        android:layout_width="102dp"
        android:layout_height="55dp"
        android:layout_marginStart="222dp"
        android:layout_marginTop="510dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="166dp"
        android:backgroundTint="@color/ruby"
        android:fontFamily="@font/f1_font_regular"
        android:onClick="toSobre"
        android:text="@string/tela_sobre"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="294dp"
        android:layout_height="113dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="512dp"
        android:fontFamily="@font/f1_font_regular"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textColor="@color/bg"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>