<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PistaActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="40dp"
                android:fontFamily="@font/f1_font_regular"
                android:text="@string/pistas"
                android:textColor="@color/bg"
                android:textSize="26sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="147dp"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/bg"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <ImageView
                    android:layout_width="145dp"
                    android:layout_height="137dp"
                    android:layout_margin="5dp"
                    android:background="@color/black"
                    android:contentDescription="@string/contentdesc"
                    android:elevation="4dp"
                    android:src="@drawable/baku"
                    app:srcCompat="@drawable/baku"
                    tools:ignore="InOrMmUsage" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/f1_font_regular"
                    android:paddingStart="1.2in"
                    android:paddingTop="50dp"
                    android:text="@string/baku"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:ignore="InOrMmUsage,RtlSymmetry" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="147dp"
                android:layout_margin="7dp"
                app:cardBackgroundColor="@color/bg"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <ImageView
                    android:layout_width="145dp"
                    android:layout_height="137dp"
                    android:layout_margin="5dp"
                    android:background="@color/black"
                    android:contentDescription="@string/contentdesc"
                    android:elevation="3dp"
                    android:src="@drawable/monaco"
                    app:srcCompat="@drawable/monaco"
                    tools:ignore="InOrMmUsage" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/f1_font_regular"
                    android:paddingStart="1.2in"
                    android:paddingTop="50dp"
                    android:text="@string/monaco"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="InOrMmUsage,RtlSymmetry" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="147dp"
                android:layout_margin="7dp"
                app:cardBackgroundColor="@color/bg"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">


                <ImageView
                    android:layout_width="145dp"
                    android:layout_height="137dp"
                    android:layout_margin="5dp"
                    android:background="@color/black"
                    android:contentDescription="@string/contentdesc"
                    android:elevation="3dp"
                    android:src="@drawable/sach"
                    app:srcCompat="@drawable/sach"
                    tools:ignore="InOrMmUsage" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/f1_font_regular"
                    android:paddingStart="1.2in"
                    android:paddingTop="50dp"
                    android:text="@string/sachsenring"
                    android:textColor="@color/white"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    tools:ignore="InOrMmUsage,RtlSymmetry" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="147dp"
                android:layout_margin="7dp"
                app:cardBackgroundColor="@color/bg"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">


                <ImageView
                    android:layout_width="145dp"
                    android:layout_height="137dp"
                    android:layout_margin="5dp"
                    android:background="@color/black"
                    android:contentDescription="@string/contentdesc"
                    android:elevation="3dp"
                    android:src="@drawable/inter"
                    app:srcCompat="@drawable/inter"
                    tools:ignore="InOrMmUsage" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/f1_font_regular"
                    android:paddingStart="1.2in"
                    android:paddingTop="50dp"
                    android:text="@string/interlagos"
                    android:textColor="@color/white"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    tools:ignore="InOrMmUsage,RtlSymmetry" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="147dp"
                android:layout_margin="7dp"
                app:cardBackgroundColor="@color/bg"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">


                <ImageView
                    android:layout_width="145dp"
                    android:layout_height="137dp"
                    android:layout_margin="5dp"
                    android:background="@color/black"
                    android:contentDescription="@string/contentdesc"
                    android:elevation="3dp"
                    android:src="@drawable/suzu"
                    app:srcCompat="@drawable/suzu"
                    tools:ignore="InOrMmUsage" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/f1_font_regular"
                    android:paddingStart="1.2in"
                    android:paddingTop="50dp"
                    android:text="@string/suzuka"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    tools:ignore="InOrMmUsage,RtlSymmetry" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="147dp"
                android:layout_margin="7dp"
                app:cardBackgroundColor="@color/bg"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <ImageView
                    android:layout_width="145dp"
                    android:layout_height="137dp"
                    android:layout_margin="5dp"
                    android:background="@color/black"
                    android:contentDescription="@string/contentdesc"
                    android:elevation="3dp"
                    android:src="@drawable/al"
                    app:srcCompat="@drawable/al"
                    tools:ignore="InOrMmUsage" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/f1_font_regular"
                    android:paddingStart="1.2in"
                    android:paddingTop="50dp"
                    android:text="@string/al"
                    android:textColor="@color/white"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    tools:ignore="InOrMmUsage,RtlSymmetry" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="147dp"
                android:layout_margin="7dp"
                app:cardBackgroundColor="@color/bg"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <ImageView
                    android:layout_width="145dp"
                    android:layout_height="137dp"
                    android:layout_margin="5dp"
                    android:background="@color/black"
                    android:contentDescription="@string/contentdesc"
                    android:elevation="3dp"
                    android:src="@drawable/miami"
                    app:srcCompat="@drawable/miami"
                    tools:ignore="InOrMmUsage" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/f1_font_regular"
                    android:paddingStart="1.2in"
                    android:paddingTop="50dp"
                    android:text="@string/miami"
                    android:textColor="@color/white"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    tools:ignore="InOrMmUsage,RtlSymmetry" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>